--- a/CCFS Tickets/Src/Dashboard.fx.yaml
+++ b/CCFS Tickets/Src/Dashboard.fx.yaml
@@ -277,8 +277,8 @@
                                 )
                             );
                             
-                            EditForm(TicketDataEditForm_1);
-                            Navigate('Ticket Information 2');
+                            EditForm(TicketDataEditForm_2);
+                            Navigate('Ticket Information 2_1');
                         PaddingBottom: =15.33
                         PaddingLeft: =15.33
                         PaddingRight: =9.26
@@ -373,8 +373,8 @@
                         Height: ='OT Label'.Height
                         Icon: =Icon.DocumentWithContent
                         OnSelect: |-
-                            =Navigate('Ticket Information 2');
-                            NewForm(TicketDataEditForm_1);
+                            =Navigate('Ticket Information 2_1');
+                            NewForm(TicketDataEditForm_2);
                         ZIndex: =2
 
                     "'Refresh Icon' As icon.Reload":
@@ -514,8 +514,8 @@
                                     )
                                 )
                             );
-                            EditForm(TicketDataEditForm_1);
-                            Navigate('Ticket Information 2');
+                            EditForm(TicketDataEditForm_2);
+                            Navigate('Ticket Information 2_1');
                         PaddingBottom: =15.33
                         PaddingLeft: =15.33
                         PaddingRight: =9.26
@@ -662,8 +662,8 @@
                                 )
                             );
                             
-                            EditForm(TicketDataEditForm_1);
-                            Navigate('Ticket Information 2');
+                            EditForm(TicketDataEditForm_2);
+                            Navigate('Ticket Information 2_1');
                         PaddingBottom: =15.33
                         PaddingLeft: =15.33
                         PaddingRight: =9.26
