--- a/CCFS Tickets/Src/Ticket Information 2_1.fx.yaml
+++ b/CCFS Tickets/Src/Ticket Information 2_1.fx.yaml
@@ -224,7 +224,8 @@
                     Color: =RGBA(204, 214, 224, 1)
                     DisabledColor: =RGBA(166, 166, 166, 1)
                     Fill: =RGBA(102, 133, 163, 1)
-                    Height: =15
+                    FontWeight: =FontWeight.Bold
+                    Height: =25
                     PaddingBottom: =7.67
                     PaddingLeft: =7.67
                     PaddingRight: =4.63
@@ -246,7 +247,7 @@
                     DataSource: =Tickets_Master
                     Fill: =RGBA(255, 255, 255, 1)
                     FillPortions: =0
-                    Height: =390
+                    Height: =350
                     Item: =varTicketID
                     LayoutMinHeight: =100
                     LayoutMinWidth: =Parent.Width
@@ -1412,7 +1413,7 @@
                         DisplayMode: =Parent.DisplayMode
                         DisplayName: =DataSourceInfo([@Tickets_Master],DataSourceInfo.DisplayName,"Ticket_Body")
                         Fill: =RGBA(0, 0, 0, 0)
-                        Height: =150
+                        Height: =140
                         MaxLength: =DataSourceInfo([@Tickets_Master], DataSourceInfo.MaxLength, "Ticket_Body")
                         Required: =false
                         Update: =DataCardValue35_2.Value
@@ -1463,7 +1464,7 @@
                             FontStrikethrough: =false
                             FontUnderline: =false
                             FontWeight: =""
-                            Height: =125
+                            Height: =100
                             Mode: ='TextInputCanvas.Mode'.Multiline
                             Value: =Trim(Parent.Default)
                             Width: =Parent.Width *.965
@@ -1493,7 +1494,7 @@
                             Image: |
                                 ="https://heinzinc-my.sharepoint.com/:i:/g/personal/bbeeken_heinzcorps_com/EaxKAGG-HS9GlmDL1h_hlZQBiHOh5TflgsOfNKEePHRi2w"
                             X: =835
-                            Y: =100
+                            Y: =50
                             ZIndex: =7
 
                     Assigned_Vendor_ID_DataCard2_2 As typedDataCard.numberEditCard:
@@ -3141,7 +3142,7 @@
                                 DisabledColor: =RGBA(166, 166, 166, 1)
                                 Fill: =RGBA(102, 133, 163, 1)
                                 FontWeight: =FontWeight.Bold
-                                Height: =12
+                                Height: =25
                                 PaddingBottom: =7.67
                                 PaddingLeft: =7.67
                                 PaddingRight: =4.63
@@ -3338,7 +3339,8 @@
                             Color: =RGBA(204, 214, 224, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
                             Fill: =RGBA(102, 133, 163, 1)
-                            Height: =12
+                            FontWeight: =FontWeight.Bold
+                            Height: =25
                             PaddingBottom: =7.67
                             PaddingLeft: =7.67
                             PaddingRight: =4.63
@@ -3505,7 +3507,8 @@
                             Color: =RGBA(204, 214, 224, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
                             Fill: =RGBA(102, 133, 163, 1)
-                            Height: =12
+                            FontWeight: =FontWeight.Bold
+                            Height: =25
                             PaddingBottom: =7.67
                             PaddingLeft: =7.67
                             PaddingRight: =4.63
