--- a/CCFS Tickets/Src/Dashboard.fx.yaml
+++ b/CCFS Tickets/Src/Dashboard.fx.yaml
@@ -24,25 +24,6 @@
         Width: =Parent.Width
         ZIndex: =1
 
-        "'CCTP Dashboard Header' As Header":
-            BasePaletteColor: =
-            DisplayMode: =DisplayMode.Edit
-            Font: =""
-            FontColor: =
-            Height: =75
-            LayoutMinHeight: =75
-            LayoutMinWidth: =Parent.Width * .9
-            Logo: ='Updated Logo June 2022 (002)'
-            OnSelectLogo: =false
-            Title: =App.ActiveScreen.Name
-            UserEmail: =User().Email
-            UserImage: =User().Image
-            UserName: =User().FullName
-            Width: =Parent.Width
-            X: =0
-            Y: =0
-            ZIndex: =1
-
         Navigation As groupContainer.verticalAutoLayoutContainer:
             DropShadow: =DropShadow.Light
             Fill: =RGBA(255, 255, 255, 1)
@@ -61,11 +42,11 @@
                 Color: =RGBA(40, 134, 222, 1)
                 DisabledBorderColor: =RGBA(166, 166, 166, 1)
                 DisabledColor: =RGBA(244, 244, 244, 1)
-                Height: =32
+                Height: =29
                 Icon: =Icon.Home
                 OnSelect: |
                     =Navigate(Dashboard)
-                Width: =32
+                Width: =30
                 ZIndex: =1
 
             Container2 As groupContainer.verticalAutoLayoutContainer:
@@ -89,8 +70,10 @@
                     BorderColor: =RGBA(0, 89, 178, 1)
                     Color: =RGBA(0, 0, 0, 1)
                     DisabledColor: =RGBA(166, 166, 166, 1)
-                    Size: =9
+                    FontWeight: =FontWeight.Bold
+                    Size: =12
                     Text: ="Navigation"
+                    Width: =250
                     ZIndex: =1
 
                 DropdownCanvas1_6 As Dropdown.pcfdataset:
@@ -116,25 +99,32 @@
                         Order: =1
                         ZIndex: =11
 
-            Timer1_1 As timer:
-                AutoStart: =true
-                Color: =RGBA(0, 0, 0, 0)
-                Duration: =300000
-                Fill: =RGBA(0, 0, 0, 0)
-                HoverColor: =RGBA(255, 255, 255, 1)
-                HoverFill: =ColorFade(RGBA(0, 51, 102, 1), -20%)
-                OnTimerEnd: |-
-                    =Refresh(Tickets_Master);
-                    Reset(Timer1_1);
-                Repeat: =true
-                ZIndex: =3
+            "'CCTP Dashboard Header' As Header":
+                AlignInContainer: =AlignInContainer.Center
+                BasePaletteColor: =
+                DisplayMode: =DisplayMode.Edit
+                Font: =""
+                FontColor: =
+                Height: =57
+                LayoutMinHeight: =75
+                LayoutMinWidth: =Parent.Width * .9
+                Logo: ='Updated Logo June 2022 (002)'
+                OnSelectLogo: =false
+                Title: =App.ActiveScreen.Name
+                UserEmail: =User().Email
+                UserImage: =User().Image
+                UserName: =User().FullName
+                Width: =Parent.Width
+                X: =0
+                Y: =0
+                ZIndex: =4
 
         "'RU, OT, OT45D' As groupContainer.horizontalAutoLayoutContainer":
             Fill: =RGBA(245, 245, 245, 1)
             Height: ='Recently Updated'.Height+'Older Than 45 Days'.Height+'Open Tickets'.Height
             LayoutAlignItems: =LayoutAlignItems.Stretch
             LayoutGap: =5
-            LayoutMinHeight: =If(Dashboard.Size < 4,400,200)
+            LayoutMinHeight: =If(Dashboard.Size < 4,400,220)
             LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
             LayoutOverflowY: =LayoutOverflow.Scroll
