--- a/CCFS Tickets/Src/Ticket Dashboard.fx.yaml
+++ b/CCFS Tickets/Src/Ticket Dashboard.fx.yaml
@@ -25,25 +25,6 @@
         Width: =Parent.Width
         ZIndex: =1
 
-        Header1_1 As Header:
-            BasePaletteColor: =
-            DisplayMode: =DisplayMode.Edit
-            Font: =""
-            FontColor: =
-            Height: =75
-            LayoutMinHeight: =75
-            LayoutMinWidth: =Parent.Width * .9
-            Logo: ='Updated Logo June 2022 (002)'
-            OnSelectLogo: =false
-            Title: =App.ActiveScreen.Name
-            UserEmail: =User().Email
-            UserImage: =User().Image
-            UserName: =User().FullName
-            Width: =Parent.Width
-            X: =0
-            Y: =0
-            ZIndex: =1
-
         Container1_6 As groupContainer.verticalAutoLayoutContainer:
             DropShadow: =DropShadow.Light
             Fill: =RGBA(255, 255, 255, 1)
@@ -77,11 +58,11 @@
                     Color: =RGBA(40, 134, 222, 1)
                     DisabledBorderColor: =RGBA(166, 166, 166, 1)
                     DisabledColor: =RGBA(244, 244, 244, 1)
-                    Height: =32
+                    Height: =29
                     Icon: =Icon.Home
                     OnSelect: |
                         =Navigate(Dashboard)
-                    Width: =32
+                    Width: =30
                     ZIndex: =1
 
                 Icon3 As icon.BackArrow:
@@ -89,10 +70,10 @@
                     Color: =RGBA(71, 158, 245, 1)
                     DisabledBorderColor: =RGBA(166, 166, 166, 1)
                     DisabledColor: =RGBA(244, 244, 244, 1)
-                    Height: =32
+                    Height: =29
                     Icon: =Icon.BackArrow
                     OnSelect: =Back()
-                    Width: =32
+                    Width: =30
                     ZIndex: =2
 
             Container2_1 As groupContainer.verticalAutoLayoutContainer:
@@ -115,14 +96,15 @@
                     BorderColor: =RGBA(0, 89, 178, 1)
                     Color: =RGBA(0, 0, 0, 1)
                     DisabledColor: =RGBA(166, 166, 166, 1)
-                    Size: =9
+                    FontWeight: =FontWeight.Bold
+                    Size: =12
                     Text: ="Navigation"
                     ZIndex: =1
 
                 DropdownCanvas1_7 As Dropdown.pcfdataset:
                     BasePaletteColor: =RGBA(214, 221, 224, 1)
                     DisplayMode: =DisplayMode.Edit
-                    Height: =32
+                    Height: =28
                     Items: =ScreenNavigationDropDownOptions
                     LayoutMinHeight: =32
                     LayoutMinWidth: =150
@@ -142,18 +124,25 @@
                         Order: =1
                         ZIndex: =11
 
-            Timer1 As timer:
-                AutoStart: =true
-                Color: =RGBA(0, 0, 0, 0)
-                Duration: =300000
-                Fill: =RGBA(0, 0, 0, 0)
-                HoverColor: =RGBA(255, 255, 255, 1)
-                HoverFill: =ColorFade(RGBA(0, 51, 102, 1), -20%)
-                OnTimerEnd: |-
-                    =Refresh(Tickets_Master);
-                    Reset(Timer1);
-                Repeat: =true
-                ZIndex: =5
+            Header1_1 As Header:
+                AlignInContainer: =AlignInContainer.Center
+                BasePaletteColor: =
+                DisplayMode: =DisplayMode.Edit
+                Font: =""
+                FontColor: =
+                Height: =58
+                LayoutMinHeight: =75
+                LayoutMinWidth: =Parent.Width * .9
+                Logo: ='Updated Logo June 2022 (002)'
+                OnSelectLogo: =false
+                Title: =App.ActiveScreen.Name
+                UserEmail: =User().Email
+                UserImage: =User().Image
+                UserName: =User().FullName
+                Width: =Parent.Width
+                X: =0
+                Y: =0
+                ZIndex: =6
 
         HeaderContainer5_1 As groupContainer.horizontalAutoLayoutContainer:
             DropShadow: =DropShadow.Light
