--- a/CCFS Tickets/Src/Vendor Dashboard.fx.yaml
+++ b/CCFS Tickets/Src/Vendor Dashboard.fx.yaml
@@ -22,25 +22,6 @@
         Width: =Parent.Width
         ZIndex: =1
 
-        Header1_4 As Header:
-            BasePaletteColor: =
-            DisplayMode: =DisplayMode.Edit
-            Font: =""
-            FontColor: =
-            Height: =75
-            LayoutMinHeight: =75
-            LayoutMinWidth: =Parent.Width * .9
-            Logo: ='Updated Logo June 2022 (002)'
-            OnSelectLogo: =false
-            Title: =App.ActiveScreen.Name
-            UserEmail: =User().Email
-            UserImage: =User().Image
-            UserName: =User().FullName
-            Width: =Parent.Width
-            X: =0
-            Y: =0
-            ZIndex: =1
-
         Container1_10 As groupContainer.verticalAutoLayoutContainer:
             DropShadow: =DropShadow.Light
             Fill: =RGBA(255, 255, 255, 1)
@@ -74,11 +55,11 @@
                     Color: =RGBA(40, 134, 222, 1)
                     DisabledBorderColor: =RGBA(166, 166, 166, 1)
                     DisabledColor: =RGBA(244, 244, 244, 1)
-                    Height: =32
+                    Height: =29
                     Icon: =Icon.Home
                     OnSelect: |
                         =Navigate(Dashboard)
-                    Width: =32
+                    Width: =30
                     ZIndex: =1
 
                 Icon3_4 As icon.BackArrow:
@@ -86,10 +67,10 @@
                     Color: =RGBA(71, 158, 245, 1)
                     DisabledBorderColor: =RGBA(166, 166, 166, 1)
                     DisabledColor: =RGBA(244, 244, 244, 1)
-                    Height: =32
+                    Height: =29
                     Icon: =Icon.BackArrow
                     OnSelect: =Back()
-                    Width: =32
+                    Width: =30
                     ZIndex: =2
 
             Container2_5 As groupContainer.verticalAutoLayoutContainer:
@@ -112,7 +93,8 @@
                     BorderColor: =RGBA(0, 89, 178, 1)
                     Color: =RGBA(0, 0, 0, 1)
                     DisabledColor: =RGBA(166, 166, 166, 1)
-                    Size: =9
+                    FontWeight: =FontWeight.Bold
+                    Size: =12
                     Text: ="Navigation"
                     ZIndex: =1
 
@@ -138,6 +120,26 @@
                         FieldVariantName: ="textualColumn"
                         Order: =1
                         ZIndex: =11
+
+            Header1_4 As Header:
+                AlignInContainer: =AlignInContainer.Center
+                BasePaletteColor: =
+                DisplayMode: =DisplayMode.Edit
+                Font: =""
+                FontColor: =
+                Height: =58
+                LayoutMinHeight: =75
+                LayoutMinWidth: =Parent.Width * .9
+                Logo: ='Updated Logo June 2022 (002)'
+                OnSelectLogo: =false
+                Title: =App.ActiveScreen.Name
+                UserEmail: =User().Email
+                UserImage: =User().Image
+                UserName: =User().FullName
+                Width: =Parent.Width
+                X: =0
+                Y: =0
+                ZIndex: =5
 
         BottomContainer3_2 As groupContainer.horizontalAutoLayoutContainer:
             Fill: =RGBA(245, 245, 245, 1)
