--- a/CCFS Tickets/Src/Site Message Dashboard.fx.yaml
+++ b/CCFS Tickets/Src/Site Message Dashboard.fx.yaml
@@ -22,24 +22,120 @@
         Width: =Parent.Width
         ZIndex: =1
 
-        Header1_5 As Header:
-            BasePaletteColor: =
-            DisplayMode: =DisplayMode.Edit
-            Font: =""
-            FontColor: =
-            Height: =75
-            LayoutMinHeight: =75
-            LayoutMinWidth: =Parent.Width * .9
-            Logo: ='Updated Logo June 2022 (002)'
-            OnSelectLogo: =false
-            Title: =App.ActiveScreen.Name
-            UserEmail: =User().Email
-            UserImage: =User().Image
-            UserName: =User().FullName
-            Width: =Parent.Width
-            X: =0
-            Y: =0
+        Container1_9 As groupContainer.verticalAutoLayoutContainer:
+            DropShadow: =DropShadow.Light
+            Fill: =RGBA(255, 255, 255, 1)
+            FillPortions: =0
+            Height: =58
+            LayoutMinWidth: =250
+            LayoutMode: =LayoutMode.Auto
+            RadiusBottomLeft: =4
+            RadiusBottomRight: =4
+            RadiusTopLeft: =4
+            RadiusTopRight: =4
             ZIndex: =1
+
+            Container7 As groupContainer.verticalAutoLayoutContainer:
+                DropShadow: =DropShadow.Light
+                LayoutDirection: =LayoutDirection.Vertical
+                LayoutMinHeight: =100
+                LayoutMinWidth: =30
+                LayoutMode: =LayoutMode.Auto
+                RadiusBottomLeft: =4
+                RadiusBottomRight: =4
+                RadiusTopLeft: =4
+                RadiusTopRight: =4
+                ZIndex: =1
+
+                Icon9 As icon.Home:
+                    BorderColor: =RGBA(0, 89, 178, 1)
+                    Color: =RGBA(0, 89, 178, 1)
+                    DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                    DisabledColor: =RGBA(244, 244, 244, 1)
+                    Height: =29
+                    Icon: =Icon.Home
+                    OnSelect: =Navigate(Dashboard)
+                    Width: =30
+                    ZIndex: =1
+
+                Icon10 As icon.BackArrow:
+                    BorderColor: =RGBA(0, 89, 178, 1)
+                    Color: =RGBA(0, 89, 178, 1)
+                    DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                    DisabledColor: =RGBA(244, 244, 244, 1)
+                    Height: =29
+                    Icon: =Icon.BackArrow
+                    OnSelect: =Back()
+                    Width: =30
+                    ZIndex: =2
+
+            Container2_4 As groupContainer.verticalAutoLayoutContainer:
+                DropShadow: =DropShadow.Light
+                FillPortions: =0
+                Height: =Label8_4.Height+DropdownCanvas1_10.Height
+                LayoutDirection: =LayoutDirection.Vertical
+                LayoutMinHeight: =Label8_4.Height+DropdownCanvas1_10.Height
+                LayoutMinWidth: =DropdownCanvas1_10.Width
+                LayoutMode: =LayoutMode.Auto
+                RadiusBottomLeft: =4
+                RadiusBottomRight: =4
+                RadiusTopLeft: =4
+                RadiusTopRight: =4
+                Width: =DropdownCanvas1_10.Width
+                ZIndex: =2
+
+                Label8_4 As label:
+                    AutoHeight: =true
+                    BorderColor: =RGBA(0, 89, 178, 1)
+                    Color: =RGBA(0, 0, 0, 1)
+                    DisabledColor: =RGBA(166, 166, 166, 1)
+                    FontWeight: =FontWeight.Bold
+                    Size: =12
+                    Text: ="Navigation"
+                    ZIndex: =1
+
+                DropdownCanvas1_10 As Dropdown.pcfdataset:
+                    BasePaletteColor: =RGBA(214, 221, 224, 1)
+                    DisplayMode: =DisplayMode.Edit
+                    Height: =32
+                    Items: =ScreenNavigationDropDownOptions
+                    LayoutMinHeight: =32
+                    LayoutMinWidth: =150
+                    OnChange: |-
+                        =Navigate(DropdownCanvas1_10.Selected.Screen);
+                        Reset(DropdownCanvas1_10);
+                    Width: =320
+                    X: =0
+                    Y: =0
+                    ZIndex: =2
+
+                    Name4_10 As pcfDataField.textualColumn:
+                        FieldDisplayName: ="Name"
+                        FieldName: ="Name"
+                        FieldType: ="s"
+                        FieldVariantName: ="textualColumn"
+                        Order: =1
+                        ZIndex: =11
+
+            Header1_5 As Header:
+                AlignInContainer: =AlignInContainer.Center
+                BasePaletteColor: =
+                DisplayMode: =DisplayMode.Edit
+                Font: =""
+                FontColor: =
+                Height: =58
+                LayoutMinHeight: =75
+                LayoutMinWidth: =Parent.Width * .9
+                Logo: ='Updated Logo June 2022 (002)'
+                OnSelectLogo: =false
+                Title: =App.ActiveScreen.Name
+                UserEmail: =User().Email
+                UserImage: =User().Image
+                UserName: =User().FullName
+                Width: =Parent.Width
+                X: =0
+                Y: =0
+                ZIndex: =3
 
         BottomContainer3_3 As groupContainer.horizontalAutoLayoutContainer:
             Fill: =RGBA(245, 245, 245, 1)
@@ -58,105 +154,7 @@
             RadiusBottomRight: =4
             RadiusTopLeft: =4
             RadiusTopRight: =4
-            ZIndex: =4
-
-            Container1_9 As groupContainer.verticalAutoLayoutContainer:
-                DropShadow: =DropShadow.Light
-                Fill: =RGBA(255, 255, 255, 1)
-                FillPortions: =0
-                Height: =Icon3_2.Height+Icon1_9.Height
-                LayoutMinWidth: =250
-                LayoutMode: =LayoutMode.Auto
-                RadiusBottomLeft: =4
-                RadiusBottomRight: =4
-                RadiusTopLeft: =4
-                RadiusTopRight: =4
-                ZIndex: =1
-
-                Container3_3 As groupContainer.verticalAutoLayoutContainer:
-                    DropShadow: =DropShadow.Light
-                    FillPortions: =0
-                    Height: =Container2_4.Height
-                    LayoutDirection: =LayoutDirection.Vertical
-                    LayoutMinHeight: =Container2_4.Height + 25
-                    LayoutMinWidth: =250
-                    LayoutMode: =LayoutMode.Auto
-                    RadiusBottomLeft: =4
-                    RadiusBottomRight: =4
-                    RadiusTopLeft: =4
-                    RadiusTopRight: =4
-                    Width: =32
-                    ZIndex: =1
-
-                    Icon1_9 As icon.Home:
-                        BorderColor: =RGBA(0, 89, 178, 1)
-                        Color: =RGBA(40, 134, 222, 1)
-                        DisabledBorderColor: =RGBA(166, 166, 166, 1)
-                        DisabledColor: =RGBA(244, 244, 244, 1)
-                        Height: =32
-                        Icon: =Icon.Home
-                        OnSelect: |
-                            =Navigate(Dashboard)
-                        Width: =32
-                        ZIndex: =1
-
-                    Icon3_2 As icon.BackArrow:
-                        BorderColor: =RGBA(0, 89, 178, 1)
-                        Color: =RGBA(71, 158, 245, 1)
-                        DisabledBorderColor: =RGBA(166, 166, 166, 1)
-                        DisabledColor: =RGBA(244, 244, 244, 1)
-                        Height: =32
-                        Icon: =Icon.BackArrow
-                        OnSelect: =Back()
-                        Width: =32
-                        ZIndex: =2
-
-                Container2_4 As groupContainer.verticalAutoLayoutContainer:
-                    DropShadow: =DropShadow.Light
-                    FillPortions: =0
-                    Height: =Label8_4.Height+DropdownCanvas1_10.Height
-                    LayoutDirection: =LayoutDirection.Vertical
-                    LayoutMinHeight: =Label8_4.Height+DropdownCanvas1_10.Height
-                    LayoutMinWidth: =DropdownCanvas1_10.Width
-                    LayoutMode: =LayoutMode.Auto
-                    RadiusBottomLeft: =4
-                    RadiusBottomRight: =4
-                    RadiusTopLeft: =4
-                    RadiusTopRight: =4
-                    Width: =DropdownCanvas1_10.Width
-                    ZIndex: =4
-
-                    Label8_4 As label:
-                        AutoHeight: =true
-                        BorderColor: =RGBA(0, 89, 178, 1)
-                        Color: =RGBA(0, 0, 0, 1)
-                        DisabledColor: =RGBA(166, 166, 166, 1)
-                        Size: =9
-                        Text: ="Navigation"
-                        ZIndex: =1
-
-                    DropdownCanvas1_10 As Dropdown.pcfdataset:
-                        BasePaletteColor: =RGBA(214, 221, 224, 1)
-                        DisplayMode: =DisplayMode.Edit
-                        Height: =32
-                        Items: =ScreenNavigationDropDownOptions
-                        LayoutMinHeight: =32
-                        LayoutMinWidth: =150
-                        OnChange: |-
-                            =Navigate(DropdownCanvas1_10.Selected.Screen);
-                            Reset(DropdownCanvas1_10);
-                        Width: =320
-                        X: =0
-                        Y: =0
-                        ZIndex: =2
-
-                        Name4_10 As pcfDataField.textualColumn:
-                            FieldDisplayName: ="Name"
-                            FieldName: ="Name"
-                            FieldType: ="s"
-                            FieldVariantName: ="textualColumn"
-                            Order: =1
-                            ZIndex: =11
+            ZIndex: =3
 
             SidebarContainer4_4 As groupContainer.verticalAutoLayoutContainer:
                 AlignInContainer: =AlignInContainer.Center
