--- a/CCFS Tickets/CanvasManifest.json
+++ b/CCFS Tickets/CanvasManifest.json
@@ -138,7 +138,7 @@
   "ScreenOrder": [
     "Dashboard",
     "Ticket Dashboard",
-    "Ticket Information 2_1",
+    "Ticket Information 2",
     "Asset Dashboard",
     "Site Message Dashboard",
     "Vendor Dashboard"
