--- a/CCFS Tickets/Src/Dashboard.fx.yaml
+++ b/CCFS Tickets/Src/Dashboard.fx.yaml
@@ -143,7 +143,7 @@
                 AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.Light
                 Fill: =RGBA(214, 221, 224, 1)
-                Height: =MainContainer1.Height
+                Height: ='Open Tickets'.Height
                 LayoutDirection: =LayoutDirection.Vertical
                 LayoutGap: =5
                 LayoutMinHeight: ='RU Body'.Height
@@ -1252,7 +1252,7 @@
                                 SRFormPopUpVisble,
                                 true
                             );
-                            EditForm(ServiceRequestForm);
+                            EditForm(ServiceRequestForm_2);
                             
                             Set(
                                 varTicketID,
@@ -1263,9 +1263,9 @@
                                     )
                                 )
                             );
-                            EditForm(TicketDataEditForm);
-                            Navigate('Ticket Information (X)');
-                            EditForm(ServiceRequestForm);
+                            EditForm(TicketDataEditForm_2);
+                            Navigate('Ticket Information');
+                            EditForm(ServiceRequestForm_2);
                         Width: =Parent.Width
                         ZIndex: =5
 
