--- a/CCFS Tickets/Src/Ticket Information.fx.yaml
+++ b/CCFS Tickets/Src/Ticket Information.fx.yaml
@@ -225,7 +225,7 @@
                     Color: =RGBA(204, 214, 224, 1)
                     DisabledColor: =RGBA(166, 166, 166, 1)
                     Fill: =RGBA(102, 133, 163, 1)
-                    FontWeight: =FontWeight.Bold
+                    FontWeight: =FontWeight.Semibold
                     Height: =25
                     PaddingBottom: =7.67
                     PaddingLeft: =7.67
@@ -3142,7 +3142,7 @@
                                 Color: =RGBA(204, 214, 224, 1)
                                 DisabledColor: =RGBA(166, 166, 166, 1)
                                 Fill: =RGBA(102, 133, 163, 1)
-                                FontWeight: =FontWeight.Bold
+                                FontWeight: =FontWeight.Semibold
                                 Height: =25
                                 PaddingBottom: =7.67
                                 PaddingLeft: =7.67
@@ -3340,7 +3340,7 @@
                             Color: =RGBA(204, 214, 224, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
                             Fill: =RGBA(102, 133, 163, 1)
-                            FontWeight: =FontWeight.Bold
+                            FontWeight: =FontWeight.Semibold
                             Height: =25
                             PaddingBottom: =7.67
                             PaddingLeft: =7.67
@@ -3508,7 +3508,7 @@
                             Color: =RGBA(204, 214, 224, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
                             Fill: =RGBA(102, 133, 163, 1)
-                            FontWeight: =FontWeight.Bold
+                            FontWeight: =FontWeight.Semibold
                             Height: =25
                             PaddingBottom: =7.67
                             PaddingLeft: =7.67
